tests/baselines/reference/computedPropertiesTransformedInOtherwiseNonTSClasses.errors.txt
computedPropertiesTransformedInOtherwiseNonTSClasses.ts(5,9): error TS2564: Property '[NS.x]' has no initializer and is not definitely assigned in the constructor.


==== computedPropertiesTransformedInOtherwiseNonTSClasses.ts (1 errors) ====
    namespace NS { 
        export const x = Symbol();
    
        class NotTransformed { 
            [NS.x]: number;
            ~~~~~~
!!! error TS2564: Property '[NS.x]' has no initializer and is not definitely assigned in the constructor.
        }
    }
    